--- a/rails-basics-ru/models/app/views/articles/index.html.erb
+++ b/rails-basics-ru/models/app/views/articles/index.html.erb
@@ -1,6 +1,7 @@
 <h1>Articles</h1>
+<ul>
+  <% @articles.each do |article| %>
+    <li><%= link_to article.title, article_path(article.id) %></li>
+  <%end%>
+</ul>
 
-<% @articles.each do |article| %>
-  <h3><%= article.title %></h3>
-  <%= link_to "Read", article_path(article.id) %>
-<%end%>
